--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
       - ./db.sqlite3:/app/db.sqlite3
     command: >
       sh -c "python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
+             python create_admin.py &&
+             python manage.py collectstatic --noinput --clear &&
              gunicorn --bind 0.0.0.0:8000 temple_attendance.wsgi:application"
