--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,13 +1,11 @@
 Django>=5.0,<6.0
+psycopg2-binary>=2.9.9
 pandas>=2.0.0
 openpyxl>=3.1.0
 python-decouple>=3.8
 dj-database-url>=2.1.0
 whitenoise>=6.5.0
 gunicorn>=21.2.0
-pymongo[srv]>=4.0
-dnspython
 dropbox==12.0.2
 Pillow==10.2.0
-python-decouple==3.8
 matplotlib==3.8.2
